--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -13,6 +13,9 @@
   <%= form.label :color, "Cor" %>
   <%= form.text_field :color %>
 
+  <%= form.label :person_id, "Tutor" %>
+  <%= form.text_field :person_id %>
+
   <%= form.submit %>
 
 <% end %>
