--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -5,6 +5,7 @@
   <p>Nome: <%= dog.name %></p>
   <p>Raça: <%= dog.breed %></p>
   <p>Cor: <%= dog.color %></p>
+  <p>Tutor: <%= dog.person_id %></p>
 
   <%= link_to "Ver esse dog", dog_path(dog) %>
 <% end %>
